# inundation

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.claude/: GITHUB_SETUP.md
.github/workflows/: ci.yml  production-ci.yml
examples/: inundation_analysis.ipynb
src/inundation/: __init__.py  cache.py  dayflow.py  fremont.py  inundation.py
tests/: __init__.py  conftest.py  test_cache.py  test_dayflow.py  test_fremont.py  test_integration.py  test_inundation.py
